weewx change history
--------------------

X.X.X XX/XX/XX

Enabled multiple rsync instances for a single weewx instance.
 
Added catchup to the WS28xx driver, but still no hardware record generation.

Moved clock synchronization options clock_check and max_drift back to
section [StdTimeSynch].

Changed lux-to-W/m^2 conversion factor in the fine offset driver.

Added rain rate calculation to Ultimeter driver.

Changed setTime to retrieve system time directly rather than using a value
passed by the engine. This greatly improves the accuracy of StdTimeSync,
particularly in network based implementations.

Fixed ENDPOINT_IN in the te923 driver.  This should provide better
compatibility with a wider range of pyusb versions.

Now catches MySQL exceptions during commits and rollbacks (as well
as queries) and converts them to weedb exceptions.

Catch and report configobj errors when reading skin.conf during the
generation of reports.

Ensure correct location, lat, lon, and altitude modifications in the
debian postinst installer script.

More extensive debug information for rscync users.

In the debian installer, default to ttyUSB0 instead of ttyS0 for stations
with a serial interface.

Added CC3000 to debian installer scripts.


2.6.4 06/16/14

The WMR100 driver now calculates SLP in software. This fixes a problem
with the WMRS200 station, which does not allow the user to set altitude.

The WMR100 driver was incorrectly tagging rain over the last 24 hours as
rain since midnight. This caused a problem with WU and CWOP posts.

Fix cosmetic problem in wee_config_fousb pressure calibration.

Detect both NP (not present) and OFL (outside factory limits) on ws28xx.

Added driver for PeetBros Ultimeter stations.

Added driver for ADS WS1 stations.

Added driver for RainWise Mark III stations and CC3000 data logger.

Added automatic power cycling to the FineOffsetUSB driver.  Power cycle the
station when a USB lockup is detected.  Only works with USB hubs that provide